@@ -5,6 +5,7 @@
             <li class="kchild kdate">
                 <div class="call">{callerFile}, line {callerLine}</div>
                 <div class="call">At: <span class="kcaller">{date}</span></div>
+                <div class="call">Url: <span class="kcaller">{callerUrl}</span></div>
             </li>
         </ul>
     </div>
