@@ -2,6 +2,8 @@
 - Introduce php-mock/php-mock-phpunit
 - Removed the TER-SonarQube findings from the unit tests.
 - Added event system to the process classes.
+- Clean(er) interface list inside the meta analysis.
+- Added current url to the caller finder output.
 - Change: Remove the event prefix and use static::class instead.
 - Change: Move cleanup methods to their own class.
 - Change: Move the output check methods to an appropriate class.
